TEST_PROGRAMS/INVALID/08/topLevelShortDecl.go
package main;
x := 4;
